# pyTaigaClient

./: README.md  pyproject.toml
docs/: Taiga_Rest_API.md
src/examples/: general.ipynb  list_projects.py
src/pytaigaclient/: __init__.py  client.py  exceptions.py
src/pytaigaclient/resources/: __init__.py  auth.py  base.py  custom_attributes.py  epics.py  issue_priorities.py  issue_severities.py  issue_statuses.py  issue_types.py  issues.py  memberships.py  milestones.py  points.py  projects.py  search.py  tasks.py  timeline.py  user_stories.py  users.py  userstory_statuses.py  webhooks.py  wiki.py
